[package]
name = "rpm-layer-scope"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "bevy_dev_tools"] }
bevy_egui = "0.36.0"
bevy_pancam = { version = "0.18.0", features = ["bevy_egui"] }
bevy_spatial = "0.11.0"
rand = "0.9.2"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
